:) Having a window shaded and switching the border to one that
   shades to another direction works properly now.
:) Changed the layout management of the Remember dialog a bit to avoid
   a problem that Hall Stevenson reported to the list. Also added a nice
   pic ;)
:) Lots of internal changes to window groups, they're now a list type and
   pointered in both directions: an ewin in a group has a pointer to a
   group, the Group has a list of EWin pointers that are group members.
:) Added dialog for picking the group a window shall belong to. See
   'Window Group'->'Select group to add to'. Maybe the layout could be
   nicer.
:) Groups are remembered now. Therefore, pagers are no longer a group
   by default, but you can make them a group and have that group be
   remembered. See the 'Remember' dialog settings. Should work, but I tested
   it only for a day or so.
:) I turned that menu onscreen appearance thing into an option, since
   I'm not too happy with it. I'm used to just left-clicking on the
   desktop for getting an Eterm, and if I do that now and the cursor
   happens to be near the screen edge, I get ee or whatever. I turned
   it on by default though :)

Hope you like it folks.

-------------------------------------------------------------------------------

Fri Aug 20 19:13:30 PDT 1999
(Raster)

Fixed some iconification bugs - a bit cleaner now - wiht snapshots and 
everything. stil soem annoying niggly where if you are snapshotting the ewin
and its shaded when you iconify - de-iconifying leaves the client window
exposed but the border is still shaded - E seems to be responding to an
events after de-iconification - mayeb - but what it is - i dunno.

-------------------------------------------------------------------------------

Mon Aug 23 14:06:19 PDT 1999
(Raster)

fixed group remembering, some other group stuff, iconfication stuff, alertbox 
stuff - god - almost everything got a fix somewhere... :) 